# openprosa

./: alembic.ini  pyproject.toml  settings.py
alembic/: env.py
api/: dependencies.py  main.py
api/middleware/: tenant.py
api/routes/: dsar.py
api/tests/: test_health_community.py
core/audit/: models.py
core/auth/: base.py  local.py
core/db/: mixins.py  pool_manager.py  scoped_session.py  session.py
core/events/: base.py  pg_notify.py
core/tenancy/: base.py  single.py
docker/: .env.example  Dockerfile  docker-compose.yml
